<resources>
    <string name="AppTools">App Info:</string>
    <string name="P_not_found">"Error: Program files could not be found!
Check the dalvik-cache location to solve this problem!
Default: /data/dalvik-cache/*"</string>
    <string name="PatchResult">Patch results</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_thanks_for_this_translation">Thanks for english translation: ChelpuS, Ms_Julia, p0izn@xda</string>
    <string name="about_working_dir">Working directory on SD Card:</string>
    <string name="aboutlp">Lucky Patcher is a universal patching tool. It is intended to modify applications in the following ways: Remove ads, Remove Google license verification (Automatically and manually), Manage permissions, and more.</string>
    <string name="aboutmenu">About</string>
    <string name="abouttitle">About Lucky Patcher by ChelpuS</string>
    <string name="activity_ads_descr">"App's Activity is Used for Advertising."</string>
    <string name="activity_descr">"App's Activity. Description Unavailable."</string>
    <string name="additinfo">Additional Info:</string>
    <string name="adsdescr">Shows all apps with Google Ads.</string>
    <string name="adstitle">Apps with ads</string>
    <string name="advanced_menu">Menu of Patches</string>
    <string name="all_custom_patches_updated">All custom patches were updated</string>
    <string name="allchanges">All changes were fixed in ODEX and will persist until the application is reinstalled!</string>
    <string name="android_patches_dialog_header1">Patches for Android</string>
    <string name="android_patches_dialog_header2">Recovering firmware after patches</string>
    <string name="android_patches_dialog_remove_patch_3">Remove patch \"%1s\"</string>
    <string name="android_patches_dialog_remove_patches_1_and_2" formatted="false">Remove patches \"%1s\" and \"%2s\"</string>
    <string name="android_patches_dialog_use_magisk_module_for_patches">Use the Magisk module to apply the patch</string>
    <string name="android_patches_for_bootlist">Android patch to dalvik-cache</string>
    <string name="android_patches_for_bootlist_status">Reapply android patches on boot</string>
    <string name="apk_create_option">Filename for Recompiled APKs</string>
    <string name="apk_not_found_error">Error: APK file could not be found.</string>
    <string name="apk_size">APK size:</string>
    <string name="apkdescr">Naming scheme for new APK files.</string>
    <string name="apklabel">"Based on App's Label"</string>
    <string name="apkpackage">"Based on App's Package Name"</string>
    <string name="app_dialog_no_root_app_control">Manage the app</string>
    <string name="app_disabler_widget_pkg_not_found">App is uninstalled</string>
    <string name="app_info">App Info</string>
    <string name="app_info_apk_is_splitted">Apk file is split</string>
    <string name="app_install_success">Application has been successfully installed.</string>
    <string name="app_name">Lucky Patcher</string>
    <string name="app_not_found">App could not be found! Please install the application and try again.</string>
    <string name="app_not_found_adapter">This app could not be found in the installed apps list.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_not_found">Nothing found.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="back">Back</string>
    <string name="backbutton">Backup</string>
    <string name="backup_data_empty">App Data is empty. There is nothing to backup.</string>
    <string name="backup_data_error">Error: Something went wrong. The backup is most likely incomplete.</string>
    <string name="backup_data_success">Settings have been successfully saved.</string>
    <string name="backup_delete_message">Do you really want to delete this backup</string>
    <string name="backup_done">"Backup succeeded. Path:
"</string>
    <string name="backup_settings_delete_message">Do you really want to delete backup app settings</string>
    <string name="backup_settings_error_message">Cannot restore application settings because it is not installed.</string>
    <string name="backup_settings_restore_message">Do you really want restore backup app settings</string>
    <string name="backups_not_found">No backup files were found in:</string>
    <string name="bad_root_detected">Root not stable. Try again or update your root. Try changing the java-root method in the settings of Lucky Patcher. It can help sometimes.</string>
    <string name="begin_changelog">Installed version is:</string>
    <string name="billing_buy">Do you want to try to get this item for free?</string>
    <string name="billing_hack2_auto_repeat_note">To disable auto-repeat you must select app and go to \"Tools\"->\"Remove selected saved purchases\" and delete item.</string>
    <string name="billing_hack2_new">"- For the best results you must make a patch to Android \"Signature Verification status always True\";
- To disable the hack go to \"Switches\" on the bottom panel Lucky Patcher and choose \"Disable Google Billing Emulation\"."</string>
    <string name="billing_hack_menu">Google Billing Emulation</string>
    <string name="billing_hack_menu_descr">Requires \"Support patch for InApp and LVL\" to target Application and applied \"Patch to Android\". Use custom patch \"Support.InApp.LVL...\" for Google Play for right purchase information and price within the application.</string>
    <string name="billing_hack_menu_disable">Disable Google Billing Emulation</string>
    <string name="billing_hack_menu_enable">Enable Google Billing Emulation</string>
    <string name="billing_hack_option">Send a reply to the application unsigned (this may work for non-root users)</string>
    <string name="billing_hack_option2">Save purchase for restore</string>
    <string name="billing_hack_warning_unity" formatted="false">If the purchase fails, try changing the type of this purchase in \"%1s\"->\"%2s\".</string>
    <string name="billing_proxy_server_for_support_patch_descr">This service is needed for \"Support patch for InApp and LVL emulation\" and rebuild the application with him.</string>
    <string name="billing_proxy_server_for_support_patch_inapp">Proxy server for emulation of inapp purchases</string>
    <string name="billing_proxy_server_for_support_patch_lvl">Proxy server for emulation of license check</string>
    <string name="bind_button">Add new Directory Bind!</string>
    <string name="bind_delete">Do you want to remove this directory bind?</string>
    <string name="bind_dialog_button">Bind Directory</string>
    <string name="bind_dialog_source">Directory with Data:</string>
    <string name="bind_dialog_target">Mount directory with data to:</string>
    <string name="bind_error">Binding failed! Data directory could not be found on device.</string>
    <string name="bind_source">Directory with Data:</string>
    <string name="bind_target">Mount Data to:</string>
    <string name="binder_browser">Browser</string>
    <string name="binder_browser_create_dir">Create directory</string>
    <string name="binder_browser_current_dir">Current directory:</string>
    <string name="binder_browser_select">Select current directory</string>
    <string name="binder_delete">Delete</string>
    <string name="bootview">Bootlist</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="browse_to_file">Browse</string>
    <string name="busybox_not_found">Warning: Busybox could not be found. Lucky Patcher cannot continue without Busybox...</string>
    <string name="button_add_to_boot_list">Add to boot</string>
    <string name="button_advanced_filter">Filters</string>
    <string name="button_all">All</string>
    <string name="button_backup_apk_apps">Backup</string>
    <string name="button_block_internet">Block Internet</string>
    <string name="button_disable_package">Disable</string>
    <string name="button_enable_package">Enable</string>
    <string name="button_for_delete">Delete</string>
    <string name="button_for_uninstall_intsaller">Start uninstalling the installer</string>
    <string name="button_integrate_update_apps">Integrate</string>
    <string name="button_move_to_internal">"Move to
internal storage"</string>
    <string name="button_move_to_sdcard">Move to SD Card</string>
    <string name="button_unblock_internet">Unblock Internet</string>
    <string name="button_uninstall_apps">Uninstall</string>
    <string name="cancel">Cancel</string>
    <string name="change_icon_lp">Change Icon</string>
    <string name="change_icon_lp_descr">You can change the default icon for Lucky Patcher in your launcher.</string>
    <string name="changelog">Changelog</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checkbox_uninstall_and_instal_backup_cache">Make data and cache backups for installation.</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="cleardalvik">Clear Dalvik-cache and Reboot</string>
    <string name="cleardata">Clear Data</string>
    <string name="context_menu_settings_show_last_added_custom_patches">Show last added custom patches</string>
    <string name="menu_download_custom_patches">Download custom patches</string>
    <string name="permissions">Permissions</string>
    <string name="settings">Settings</string>
    <string name="sortbyname">Sort by Name</string>
    <string name="sortbystatus">Sort by Status</string>
    <string name="sortbytime">Sort by Install Date</string>
    <string name="toolbar_refresh_apps">Rescan Apps</string>
    <string name="truble">Troubleshooting</string>
    <string name="xposed_settings">Xposed settings</string>
</resources>