<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/appbodyscroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <LinearLayout android:orientation="vertical" android:id="@id/appdialogbody" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/google_play_button" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <ImageView android:id="@id/app_imageView" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:src="@drawable/ic_launcher" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
                <TextView android:textSize="17.0dip" android:gravity="center_vertical" android:id="@id/app_textView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="10.0dip" android:minHeight="40.0dip" android:text="" android:layout_alignParentTop="true" />
            </LinearLayout>
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:background="@drawable/rounded_corner" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="0.0dip" android:text="@string/AppTools" android:layout_alignParentLeft="true" />
            <ProgressBar android:id="@id/progressBar1" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" />
            <TextView android:id="@id/app_textView3" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:minHeight="50.0dip" android:text="" android:layout_alignParentLeft="true" android:textIsSelectable="true" />
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:background="@drawable/rounded_corner" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="0.0dip" android:text="@string/additinfo" android:layout_alignParentLeft="true" android:textIsSelectable="true" />
            <TextView android:id="@id/app_textView2" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="" android:layout_alignParentLeft="true" android:textIsSelectable="true" />
            <TextView android:textStyle="bold" android:textColor="#ff000000" android:background="@drawable/rounded_corner" android:paddingLeft="10.0dip" android:paddingTop="2.0dip" android:paddingBottom="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="0.0dip" android:text="@string/permissions" android:layout_alignParentLeft="true" android:textIsSelectable="true" />
            <TextView android:id="@id/app_textView31" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="5.0dip" android:text="" android:layout_alignParentLeft="true" android:textIsSelectable="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>